--- a/src/index.html
+++ b/src/index.html
@@ -10,11 +10,9 @@
     <script src="/vendor/vue.js"></script>
     <script src="/vendor/vue-router.js"></script>
     
-    <!--
-    MATERIALIZE
+    <link href="/vendor/icon.css" rel="stylesheet">
     <script src="/vendor/materialize.min.js"></script>
-    <link type="text/css" rel="stylesheet" href="/vendor/materialize.min.css"  media="screen,projection"/>
-    -->
+    <link type="text/css" rel="stylesheet" href="/vendor/materialize.min.css"   media="screen,projection"/>
 
     <!--
       To prevent waterfall-loading, we preload
